--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -11,7 +11,7 @@
   
   <servlet-mapping>
     <servlet-name>supportServlet</servlet-name>
-    <url-pattern>/help</url-pattern>
+    <url-pattern>/help-service/v1/support</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
