--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,11 @@ target/
 .idea/jarRepositories.xml
 .idea/compiler.xml
 .idea/libraries/
+.idea/encodings.xml
+.idea/jpa-buddy.xml
+.idea/misc.xml
+.idea/vcs.xml
+.idea/workspace.xml
 *.iws
 *.iml
 *.ipr
@@ -36,10 +41,3 @@ build/
 
 ### Mac OS ###
 .DS_Store
-
-### XML ###
-encodings.xml
-jpa-buddy.xml
-misc.xml
-vcs.xml
-workspace.xml
