--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -5,13 +5,13 @@
 <web-app>
   
   <servlet>
-    <servlet-name>supportServlet</servlet-name>
-    <servlet-class>homework.servlets.SupportServlet</servlet-class>
+    <servlet-name>myDispatcherServlet</servlet-name>
+    <servlet-class>homework.rest.MyDispatcherServlet</servlet-class>
   </servlet>
   
   <servlet-mapping>
-    <servlet-name>supportServlet</servlet-name>
-    <url-pattern>/help-service/v1/support</url-pattern>
+    <servlet-name>myDispatcherServlet</servlet-name>
+    <url-pattern>/help-service</url-pattern>
   </servlet-mapping>
 
   <welcome-file-list>
