--- a/pom.xml
+++ b/pom.xml
@@ -56,9 +56,9 @@
       <version>0.10.2</version>
     </dependency>
     <dependency>
-      <groupId>org.inMemoryBrokerLib</groupId>
-      <artifactId>inMemoryBrokerLib</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <groupId>org.springframework.kafka</groupId>
+      <artifactId>spring-kafka</artifactId>
+      <version>2.8.0</version>
     </dependency>
     <dependency>
       <groupId>org.projectlombok</groupId>
